@@ -15,6 +15,8 @@ sourceforge (2.6-0+8+) unstable; urgency=low
     path: installing 2.6 over 2.5 should yield the same scheme as
     installing 2.6 from scratch.  This task is not finished yet.
   * [Christian] gig2png conversion to make GNU happy.
+  * [Christian] some html cleaning in Layout.class and osdn.php
+  * [Christian] added Add, Delete, or Edit Themes in Site Utilities for admin
 
  -- Roland Mas <lolando@debian.org>  Thu, 28 Mar 2002 22:41:51 +0100
 
